refactor: 코드 컨밴션에 맞게 CommentController 리팩토링